# wc2026

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  world_cup_predictor_research.md
.claude/: launch.json
src/wcpredictor/: __init__.py  config.py  predict.py  simulate.py
src/wcpredictor/api/: app.py  schemas.py
src/wcpredictor/api/static/: index.html
src/wcpredictor/data/: bets.py  download.py  download_odds.py  download_odds_api.py  download_wc2010_odds.py  download_wc2026.py  download_wc_ah_odds.py  load_matches.py  normalize_teams.py  results_2026.py  sgpools.py
src/wcpredictor/evaluation/: backtest.py  ev_backtest.py  live.py  metrics.py  model_select.py
src/wcpredictor/features/: ah_odds.py  elo.py  form.py  odds.py
src/wcpredictor/markets/: __init__.py  asian.py  edge.py  value_scan.py
src/wcpredictor/models/: calibration.py  dixon_coles.py  ensemble.py  gbm.py  logistic.py  poisson.py
tests/: test_ah_alpha_cap.py  test_api.py  test_asian_handicap.py  test_backtest_time_safety.py  test_calibration.py  test_dixon_coles.py  test_elo_no_leakage.py  test_ensemble.py  test_ensemble_mkt_blend.py  test_ev_backtest.py  test_form.py  test_gbm.py  test_ledger.py  test_logistic.py  test_market_edge.py  test_metrics.py  test_normalize_teams.py  test_odds.py  test_odds_alpha_cap.py  test_odds_api_h2h.py  test_poisson_outputs.py  test_results_ingestion.py  test_sgpools.py  test_simulate.py  test_simulate_conditioned.py  test_split_cutoff.py  test_value_scan.py  test_wc2026.py
tests/fixtures/: odds_api_h2h_sample.json
