[project]
name = "wcpredictor"
version = "0.1.0"
description = "Pre-match FIFA World Cup match predictor"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcpredictor"]
